test/fixtures/diagnostics/type-checker/negative/enum-value-bitwise-or-invalid/input.tysh
namespace Samples.TypeChecker.EnumValueBitwiseOrInvalid

enum Permission {
  Read,
  Write
}

enum Color {
  Red,
  Blue
}

let mixedEnum: Permission = Permission.Read | Color.Red

let enumAndNumber: Permission = Permission.Read | 1
